--- a/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
+++ b/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
@@ -22,6 +22,7 @@
           <mat-label>Nombre</mat-label>
           <input type="text" matInput [formControl]="txNombre"/>
         </mat-form-field>
+        <app-error-messages [control]="txNombre"></app-error-messages>
       </div>
 
       <div class="col-md-4">
@@ -29,6 +30,7 @@
           <mat-label>Apellido</mat-label>
           <input type="text" matInput [formControl]="txApellido"/>
         </mat-form-field>
+        <app-error-messages [control]="txApellido"></app-error-messages>
       </div>
 
       <div class="col-md-4">
@@ -37,6 +39,7 @@
           <input type="email" matInput [formControl]="txMail"/>
         </mat-form-field>
       </div>
+      <app-error-messages [control]="txMail"></app-error-messages>
     </div>
 
     <div class="row pt-4">
@@ -49,6 +52,7 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <app-error-messages [control]="txCondicionIva"></app-error-messages>
       </div>
 
       <div class="col-md-4">
@@ -56,6 +60,7 @@
           <mat-label>DNI</mat-label>
           <input type="text" matInput [formControl]="txDNI"/>
         </mat-form-field>
+        <app-error-messages [control]="txDNI"></app-error-messages>
       </div>
 
       <div class="col-md-4">
@@ -67,6 +72,7 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <app-error-messages [control]="ddGenero"></app-error-messages>
       </div>
     </div>
 
@@ -78,11 +84,7 @@
           <mat-datepicker-toggle matSuffix [for]="pickerFechaNacimiento"></mat-datepicker-toggle>
           <mat-datepicker #pickerFechaNacimiento></mat-datepicker>
         </mat-form-field>
-        <div *ngIf="form.get('txFechaNacimiento')?.touched || form.get('txFechaNacimiento')?.dirty">
-          <div *ngIf="form.get('txFechaNacimiento')?.hasError('fechaInvalida')">
-            La fecha de nacimiento debe ser anterior a hoy.
-          </div>
-        </div>
+        <app-error-messages [control]="txFechaNacimiento"></app-error-messages>
       </div>
     </div>
 
@@ -99,6 +101,7 @@
                  [formControl]="txProvincia"
                  [matAutocomplete]="autoCompleteProvincia">
         </mat-form-field>
+        <app-error-messages [control]="txProvincia"></app-error-messages>
         <mat-autocomplete #autoCompleteProvincia="matAutocomplete" (optionSelected)="seleccionarProvincia()">
           <mat-option *ngFor="let provincia of this.provinciasFiltradas" [value]="provincia.nombre">
             {{provincia.nombre}}
@@ -114,6 +117,7 @@
                  (input)="filtrarLocalidades()"
                  [matAutocomplete]="autoCompleteLocalidad">
         </mat-form-field>
+        <app-error-messages [control]="txLocalidad"></app-error-messages>
         <mat-autocomplete #autoCompleteLocalidad="matAutocomplete" (optionSelected)="seleccionarLocalidad()">
           <mat-option *ngFor="let localidad of this.localidadesFiltradas" [value]="localidad.nombre">
             {{localidad.nombre}}
@@ -126,12 +130,14 @@
           <mat-label>Calle</mat-label>
           <input type="text" matInput [formControl]="txCalle"/>
         </mat-form-field>
+        <app-error-messages [control]="txCalle"></app-error-messages>
       </div>
       <div class="col-md-3">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Número</mat-label>
           <input type="text" matInput [formControl]="txNumero"/>
         </mat-form-field>
+        <app-error-messages [control]="txNumero"></app-error-messages>
       </div>
       <div class="row pt-2">
         <div class="col-md-3">
@@ -139,6 +145,7 @@
             <mat-label>Código Postal</mat-label>
             <input type="text" matInput [formControl]="txCodigoPostal"/>
           </mat-form-field>
+          <app-error-messages [control]="txCodigoPostal"></app-error-messages>
         </div>
 
         <div class="spinner-wrapper" *ngIf="isLoading">
