--- a/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.html
+++ b/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.html
@@ -71,6 +71,7 @@
                                   cdkAutosizeMaxRows="10">
                         </textarea>
                       </mat-form-field>
+                      <app-error-messages [control]="txComentario"></app-error-messages>
                     </div>
                   </div>
                 </form>
