--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -16,12 +16,14 @@
                   <mat-label>Nombre</mat-label>
                   <input type="text" matInput [formControl]="txNombre"/>
                 </mat-form-field>
+                <app-error-messages [control]="txNombre"></app-error-messages>
               </div>
               <div class="col-6">
                 <mat-form-field appearance="outline" class="w-100">
                   <mat-label>Apellido</mat-label>
                   <input type="text" matInput [formControl]="txApellido"/>
                 </mat-form-field>
+                <app-error-messages [control]="txApellido"></app-error-messages>
               </div>
             </div>
           </div>
@@ -31,8 +33,9 @@
             <div class="col">
               <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Nombre de usuario</mat-label>
-                <input type="text" matInput formControlName="txNombreUsuario"/>
+                <input type="text" matInput [formControl]="txNombreUsuario"/>
               </mat-form-field>
+              <app-error-messages [control]="txNombreUsuario"></app-error-messages>
             </div>
             <div class="col">
               <mat-form-field appearance="outline" class="w-100">
@@ -41,10 +44,8 @@
                 <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" type="button">
                   <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
                 </button>
-                <mat-error *ngIf="formLogin.get('txContrasena')?.hasError('required')">La contraseña es requerida</mat-error>
-                <mat-error *ngIf="formLogin.get('txContrasena')?.hasError('minlength')">La contraseña debe tener al menos 8 caracteres</mat-error>
-                <mat-error *ngIf="formLogin.get('txContrasena')?.hasError('pattern')">La contraseña debe contener al menos una letra mayúscula y un número</mat-error>
               </mat-form-field>
+              <app-error-messages [control]="txContrasena"></app-error-messages>
             </div>
             <div *ngIf="!existeConfiguracion" class="col">
               <mat-form-field appearance="outline" class="w-100">
@@ -53,8 +54,8 @@
                 <button mat-icon-button matSuffix (click)="hideConfirmPassword = !hideConfirmPassword" type="button">
                   <mat-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
                 </button>
-                <mat-error *ngIf="formLogin.get('txConfirmarContrasena')?.hasError('passwordMismatch')">Las contraseñas no coinciden</mat-error>
               </mat-form-field>
+              <app-error-messages [control]="txConfirmarContrasena"></app-error-messages>
             </div>
           </div>
 
