--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
@@ -20,6 +20,7 @@
             <mat-label>Número de orden</mat-label>
             <input type="text" matInput [formControl]="txPedido"/>
           </mat-form-field>
+          <app-error-messages [control]="txPedido"></app-error-messages>
         </div>
 
         <div class="col-md-3">
@@ -31,6 +32,7 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
+          <app-error-messages [control]="txProveedor"></app-error-messages>
         </div>
 
         <div class="col-md-3">
@@ -40,6 +42,7 @@
             <mat-datepicker-toggle matSuffix [for]="pickerDesde"></mat-datepicker-toggle>
             <mat-datepicker #pickerDesde></mat-datepicker>
           </mat-form-field>
+          <app-error-messages [control]="txFechaEmisionDesde"></app-error-messages>
         </div>
 
         <div class="col-md-3">
@@ -49,6 +52,7 @@
             <mat-datepicker-toggle matSuffix [for]="pickerHasta"></mat-datepicker-toggle>
             <mat-datepicker #pickerHasta></mat-datepicker>
           </mat-form-field>
+          <app-error-messages [control]="txFechaEmisionHasta"></app-error-messages>
         </div>
       </div>
 
@@ -62,6 +66,7 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
+          <app-error-messages [control]="txEstado"></app-error-messages>
         </div>
       </div>
     </form>
