--- a/src/app/modules/productos/buscar-productos/buscar-productos.component.html
+++ b/src/app/modules/productos/buscar-productos/buscar-productos.component.html
@@ -25,6 +25,7 @@
           <input type="text" matInput [formControl]="txBuscar"/>
           <mat-icon matPrefix>search</mat-icon>
         </mat-form-field>
+        <app-error-messages [control]="txBuscar"></app-error-messages>
       </div>
     </div>
 
