--- a/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
+++ b/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
@@ -22,36 +22,35 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
+          <app-error-messages [control]="txTipoProveedor"></app-error-messages>
         </div>
         <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Nombre</mat-label>
             <input type="text" matInput [formControl]="txNombre"/>
           </mat-form-field>
-          <!--
-          <caja-control-messages [control]="txCodigo"></caja-control-messages>
-          -->
+          <app-error-messages [control]="txNombre"></app-error-messages>
         </div>
         <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Teléfono</mat-label>
             <input type="text" matInput [formControl]="txTelefono"/>
           </mat-form-field>
+          <app-error-messages [control]="txTelefono"></app-error-messages>
         </div>
         <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Email</mat-label>
             <input type="email" matInput [formControl]="txEmail"/>
           </mat-form-field>
+          <app-error-messages [control]="txEmail"></app-error-messages>
         </div>
         <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>CUIT/CUIL</mat-label>
             <input type="text" mask="00-00000000-0" matInput [formControl]="txCuit"/>
           </mat-form-field>
-          <!--
-          <caja-control-messages [control]="txCodigo"></caja-control-messages>
-          -->
+          <app-error-messages [control]="txCuit"></app-error-messages>
         </div>
       </div>
 
@@ -66,6 +65,7 @@
                      [formControl]="txProvincia"
                      [matAutocomplete]="autoCompleteProvincia">
             </mat-form-field>
+            <app-error-messages [control]="txProvincia"></app-error-messages>
             <mat-autocomplete #autoCompleteProvincia="matAutocomplete" (optionSelected)="seleccionarProvincia()">
               <mat-option *ngFor="let provincia of this.provinciasFiltradas" [value]="provincia.nombre">
                 {{provincia.nombre}}
@@ -81,6 +81,7 @@
                    (input)="filtrarLocalidades()"
                    [matAutocomplete]="autoCompleteLocalidad">
           </mat-form-field>
+          <app-error-messages [control]="txLocalidad"></app-error-messages>
           <mat-autocomplete #autoCompleteLocalidad="matAutocomplete" (optionSelected)="seleccionarLocalidad()">
             <mat-option *ngFor="let localidad of this.localidadesFiltradas" [value]="localidad.nombre">
               {{localidad.nombre}}
@@ -93,12 +94,14 @@
             <mat-label>Calle</mat-label>
             <input type="text" matInput [formControl]="txCalle"/>
           </mat-form-field>
+          <app-error-messages [control]="txCalle"></app-error-messages>
         </div>
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Número</mat-label>
             <input type="text" matInput [formControl]="txNumero"/>
           </mat-form-field>
+          <app-error-messages [control]="txNumero"></app-error-messages>
         </div>
       </div>
     </form>
